# Bench-CPU-GPU-PIR-Puzzle

./: CMakeLists.txt  README.md
src/chor-pir/cpu/: Makefile  README.md  main.cpp  plot.py  run.sh  runtime_results.txt  serverComp.cpp  serverComp.hpp  types.h  util.h
src/chor-pir/cpu/misc/: helper_string.h  helper_timer.h
src/chor-pir/gpu/: Makefile  README.md  main.cu  plot.py  runtime_results.txt  serverComp.cu  serverComp.cuh  types.h  util.cu  util.cuh
src/goldberg-pir/: cpu-diagram.py  cpu_bench.sh  cpu_mm_mult.cpp  diagram.py  gpu-diagram.py  gpu_bench.sh  gpu_mm_mult.cu
src/lib/: mm_mult.cu
src/puzzles/: SVP.cuh  hashcashtree.cpp  hashcashtree.cu
src/puzzles/HashCash/: bench_cpu.sh  bench_gpu.sh  hashcashtree_gen.cpp  hashcashtree_gen.cu  sha2.cuh
src/puzzles/SVP/: cpu_bench.sh  generate_random.cpp  gpu_bench.sh  puzzle_gen_cpu.cpp  puzzle_gen_gpu.cu  readme.txt  tools.h
test/: test_mm_mult.cu
